--- a/inventory/group_vars/servers/vars.yml
+++ b/inventory/group_vars/servers/vars.yml
@@ -23,7 +23,8 @@ domain: "{{ all_net.vm.domain }}"
 btrfs_scrub_email: "{{ smartd_email }}"
 btrfs_scrub_from_email: "{{ smartd_from_address }}"
 
+gitlab_registry_basename: "registry.{{ domains['dv'] }}"
 gitlab_external_url: "https://gitlab.{{ domains['dv'] }}"
-gitlab_registry_external_url: "https://registry.{{ domains['dv'] }}"
+gitlab_registry_external_url: "https://{{ gitlab_registry_basename }}"
 
 my_user_pass: "{{ vault_my_user_pass }}"
