--- a/inventory/group_vars/talos/vars.yml
+++ b/inventory/group_vars/talos/vars.yml
@@ -40,3 +40,5 @@ node_labels: >-
   {{ tmp }}
 
 vm_mdev_uuids: "{{ hostvars[vm_host].intel_gvt_enabled | ternary(['talos' | to_uuid], []) }}"
+# Keep disabled for security, I guess
+enable_admin_pods: false
