--- a/inventory/group_vars/k8s_cluster/calico.yml
+++ b/inventory/group_vars/k8s_cluster/calico.yml
@@ -8,7 +8,7 @@ local_as: "{{ 65001 + (groups['k8s_cluster'] | ansible.utils.index_of('eq', inve
 peers:
   - name: "rb5009"
     as: "{{ mt_bgp_peers[0].as }}"
-    router_id: "{{ (hostvars['rb5009'].mt_routing_ids | selectattr('name', 'eq', 'vm') | first).id }}"
+    router_id: "{{ (hostvars['rb5009'].mt_routing_ids | selectattr('name', 'eq', host_net) | first).id }}"
     scope: global
 
 calico_advertise_cluster_ips: true
