--- a/inventory/group_vars/k8s_cluster/libvirt.yml
+++ b/inventory/group_vars/k8s_cluster/libvirt.yml
@@ -42,7 +42,7 @@ __ignition_networkd_vars:
   gateway: "{{ vm_default_nic.gateway }}"
   default_route: "yes"
   address: "{{ vm_default_nic.address }}"
-  prefix: "{{ all_net.vm.cidr | ansible.utils.ipaddr('prefix') }}"
+  prefix: "{{ all_net[host_net].cidr | ansible.utils.ipaddr('prefix') }}"
   dns_servers: "{{ vm_default_nic.dns_servers[:2] }}"
   domain: "{{ vm_default_nic.domain }}"
   mtu: 1500
