--- a/roles/mt_vlans/tasks/main.yml
+++ b/roles/mt_vlans/tasks/main.yml
@@ -9,6 +9,7 @@
 - name: Configure VLANs
   community.routeros.api_modify:
     path: interface vlan
+    timeout: 20
     data: "{{ __vlans.new_data }}"
     handle_absent_entries: remove
     handle_entries_content: remove_as_much_as_possible
@@ -26,6 +27,7 @@
 - name: Configure bridge ports
   community.routeros.api_modify:
     path: interface bridge port
+    timeout: 20
     data: "{{ __br_ports.new_data }}"
     handle_absent_entries: remove
     handle_entries_content: remove_as_much_as_possible
