--- a/inventory/host_vars/rb5009/bgp.yml
+++ b/inventory/host_vars/rb5009/bgp.yml
@@ -1,8 +1,11 @@
 ---
 
 mt_routing_ids:
-  - id: "{{ host_ips.vm }}"
-    name: vm
+  - id: "{{ host_ips.kube }}"
+    name: kube
+    select-from-vrf: main
+  - id: "{{ host_ips.talos }}"
+    name: talos
     select-from-vrf: main
 
 mt_bgp_peers: >-
