--- a/inventory/group_vars/kvm_hv/firewall.yml
+++ b/inventory/group_vars/kvm_hv/firewall.yml
@@ -27,16 +27,20 @@ __firewall_ssh_public: "absent"
 __firewall_cockpit_zone: "internal"
 __firewalld_zones_2:
   - name: internal
-    # TODO: Extract all with 'vlan' from internal_net
-    interfaces:
-      - MGMT
-      - SAN
+    interfaces: >-
+      {%- set tmp = [] -%}
+      {%- for name, config in internal_net.items() if 'vlan' in config -%}
+      {{- tmp.append(name | upper) -}}
+      {%- endfor -%}
+      {{ tmp }}
 
-  # TODO: Extract all with 'vlan' from home_net
   - name: public
-    interfaces:
-      - GENERAL
-      - VM
+    interfaces: >-
+      {%- set tmp = [] -%}
+      {%- for name, config in home_net.items() if 'vlan' in config -%}
+      {{- tmp.append(name | upper) -}}
+      {%- endfor -%}
+      {{ tmp }}
 
 __firewalld_services_2:
   - name: cockpit
