--- a/playbooks/mikrotik.yml
+++ b/playbooks/mikrotik.yml
@@ -492,6 +492,17 @@
       when: mt_firewall_nat | default([])
       tags: ["firewall", "nat"]
 
+    - name: Configure IPv4 firewall raw  # noqa args[module]
+      delegate_to: localhost
+      community.routeros.api_modify:
+        path: ip firewall raw
+        data: "{{ mt_firewall_raw }}"
+        ensure_order: true
+        handle_absent_entries: remove
+        handle_entries_content: remove_as_much_as_possible
+      when: mt_firewall_raw | default([])
+      tags: ["firewall", "raw"]
+
     - name: Configure IPv6 ND  # noqa args[module]
       delegate_to: localhost
       community.routeros.api_modify:
